Upgraded to express 4
Incorporated output from the express 4 generator and changes some of the
routing. Also added a generic HTML file

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,3 +6,15 @@ body {
 a {
   color: #00B7FF;
 }
+.buttons-container {
+    display: inline-block;
+}
+
+
+.on-button {
+    background-color: #0f0;
+}
+
+.off-button {
+    background-color: #f00;
+}
