Basic implementation of turning all devices off

--- a/public/templates/scenes.html
+++ b/public/templates/scenes.html
@@ -1,1 +1,3 @@
-<h2>Scenes Placeholder</h2>
+<h2>Scenes</h2>
+
+<a href="" class="btn btn-primary btn-lg" ng-click="allOffClicked()">All Lights Off</a>
