--- a/app/css/style.css
+++ b/app/css/style.css
@@ -19,3 +19,9 @@ body {
   background-color: hsla(0, 0%, 92%, 0.72);
   border-radius: 3px;
 }
+
+@media screen and (max-width: 767px) {
+  .navbar-header {
+    padding-top: 20px;
+  }
+}
