--- a/app/css/style.css
+++ b/app/css/style.css
@@ -59,6 +59,11 @@ body {
   border-color: #4a4b6d;
 }
 
+/* bootstrap overrides */
+.modal-dialog {
+    margin-top: 100px;
+}
+
 @media screen and (max-width: 767px) {
   .navbar-header {
     padding-top: 20px;
