Added rounded corners for for only the outsides of on/off buttons

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -59,6 +59,13 @@ body {
   border-color: #4a4b6d;
 }
 
+.button-on {
+  border-radius: 4px 0px 0px 4px;
+}
+
+.button-off {
+  border-radius: 0px 4px 4px 0px;
+}
 /* bootstrap overrides */
 .modal-dialog {
     margin-top: 100px;
