Styled on/off buttons to be pushed together

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -59,6 +59,10 @@ body {
   border-color: #4a4b6d;
 }
 
+.btn.button-switch  {
+  padding: 4px;
+}
+
 .button-on {
   border-radius: 4px 0px 0px 4px;
 }
