--- a/app/templates/devices.html
+++ b/app/templates/devices.html
@@ -7,8 +7,7 @@
 
     <div class="col-sm-12 col-md-5">
       <div class="buttons-container text-right">
-        <button data-button-type="on" class="button-on btn btn-success" ng-click="turnOnDevice(device)">ON</button>
-        <button data-button-type="off" class="button-off btn btn-danger" ng-click="turnOffDevice(device)">OFF</button>
+        <button data-button-type="on" class="button-on button-switch btn btn-success btn-lg" ng-click="turnOnDevice(device)">ON</button><button data-button-type="off" class="button-off button-switch btn btn-danger btn-lg" ng-click="turnOffDevice(device)">OFF</button>
       </div>
     </div>
   </div>
